[package]
name = "judge"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

[dependencies]
tokio-process = "0.3.0-alpha.2"
tokio = "0.2.0-alpha.2"
futures-util-preview = "=0.3.0-alpha.18"
paw = "1.0.0"
structopt = { version = "0.2.18", features = [ "paw" ] }
arrayvec = "0.4.11"
